Updated summary statistics

--- a/AnalysisV2.ipynb
+++ b/AnalysisV2.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
@@ -350,31 +350,31 @@
      "text": [
       "                                             OLS Regression Results                                            \n",
       "===============================================================================================================\n",
-      "Dep. Variable:     Mortality rates Infant (per 1,000 live births) 2015   R-squared:                       0.801\n",
-      "Model:                                                             OLS   Adj. R-squared:                  0.794\n",
-      "Method:                                                  Least Squares   F-statistic:                     106.6\n",
-      "Date:                                                 Sat, 03 Jun 2023   Prob (F-statistic):           1.77e-61\n",
-      "Time:                                                         21:15:57   Log-Likelihood:                -713.94\n",
-      "No. Observations:                                                  193   AIC:                             1444.\n",
-      "Df Residuals:                                                      185   BIC:                             1470.\n",
+      "Dep. Variable:     Mortality rates Infant (per 1,000 live births) 2015   R-squared:                       0.810\n",
+      "Model:                                                             OLS   Adj. R-squared:                  0.800\n",
+      "Method:                                                  Least Squares   F-statistic:                     77.38\n",
+      "Date:                                                 Sat, 03 Jun 2023   Prob (F-statistic):           9.56e-43\n",
+      "Time:                                                         21:25:42   Log-Likelihood:                -497.24\n",
+      "No. Observations:                                                  135   AIC:                             1010.\n",
+      "Df Residuals:                                                      127   BIC:                             1034.\n",
       "Df Model:                                                            7                                         \n",
       "Covariance Type:                                             nonrobust                                         \n",
       "=========================================================================================================================\n",
       "                                                            coef    std err          t      P>|t|      [0.025      0.975]\n",
       "-------------------------------------------------------------------------------------------------------------------------\n",
-      "const                                                    31.5013      3.666      8.593      0.000      24.269      38.733\n",
-      "Mean years of schooling                                  -2.0848      0.926     -2.251      0.026      -3.912      -0.258\n",
-      "Mean years of schooling Female                           -2.1601      0.951     -2.271      0.024      -4.037      -0.284\n",
-      "Mean years of schooling Male                              2.1427      1.092      1.962      0.051      -0.012       4.297\n",
-      "Infants lacking immunization DTP (% of one-year-olds)     0.4216      0.094      4.506      0.000       0.237       0.606\n",
-      "Deaths due to Malria (per 100,000 people)                 0.1799      0.029      6.288      0.000       0.123       0.236\n",
-      "Deaths due to Tuberculosis (per 100,000 people)           0.2809      0.043      6.516      0.000       0.196       0.366\n",
-      "Physicians  (per 10,000 people) 2001-2014                -0.2534      0.065     -3.893      0.000      -0.382      -0.125\n",
+      "const                                                    27.2353      4.362      6.244      0.000      18.604      35.866\n",
+      "Mean years of schooling                                  -2.4640      1.126     -2.188      0.031      -4.693      -0.235\n",
+      "Mean years of schooling Female                           -2.6679      1.128     -2.366      0.020      -4.900      -0.436\n",
+      "Mean years of schooling Male                              3.5129      1.308      2.685      0.008       0.924       6.102\n",
+      "Infants lacking immunization DTP (% of one-year-olds)     0.6370      0.124      5.137      0.000       0.392       0.882\n",
+      "Deaths due to Malria (per 100,000 people)                 0.1737      0.034      5.175      0.000       0.107       0.240\n",
+      "Deaths due to Tuberculosis (per 100,000 people)           0.2348      0.056      4.214      0.000       0.125       0.345\n",
+      "Physicians  (per 10,000 people) 2001-2014                -0.2931      0.075     -3.907      0.000      -0.442      -0.145\n",
       "==============================================================================\n",
-      "Omnibus:                       35.368   Durbin-Watson:                   2.387\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               66.059\n",
-      "Skew:                           0.903   Prob(JB):                     4.52e-15\n",
-      "Kurtosis:                       5.225   Cond. No.                         253.\n",
+      "Omnibus:                       32.978   Durbin-Watson:                   1.967\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               67.406\n",
+      "Skew:                           1.043   Prob(JB):                     2.31e-15\n",
+      "Kurtosis:                       5.762   Cond. No.                         254.\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -383,8 +383,8 @@
     }
    ],
    "source": [
-    "df_x2 = sm.add_constant(df_x)\n",
-    "est = sm.OLS(df_y, df_x2)\n",
+    "df_x2 = sm.add_constant(X_train)\n",
+    "est = sm.OLS(y_train, df_x2)\n",
     "est2 = est.fit()\n",
     "print(est2.summary())\n"
    ],
